--- a/css/screen.css
+++ b/css/screen.css
@@ -592,7 +592,7 @@ body.nav-opened .site-wrapper {
 .main-header a.bloglogo .icon-instagram,
 .main-header a.bloglogo .icon-pinterest,
 .main-header a.bloglogo .icon-google-plus {
-    color: white;
+    color: black;
     font-size: 2em;
 }
 
